2001-11-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* organic_matter.C (tick): Added debug information.

	* mactrans_std.C (tick): Changed assertion to warning.

2001-11-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.94 released.

2001-11-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* crpaux.C, crpaux.h: Removed submodel.
	* Makefile (SUBMODELS): Removed.
	(REMOVE): Added it here.
	* production.C, production.h: Merged it here.
	* lib/log.dai: Updated.

	* Version 1.93 released.

2001-11-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* crop_std.C, photosynthesis.C, photosynthesis.h, production.C,
	production.h, crpaux.C, crpaux.h:  Moved code to submodel. 

	* Version 1.92 released.

2001-11-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai ("N Balance"): Fixated moved to CrpN.
	("Crop Production"): AccFixated moved to CrpN.

	* photosynthesis.C, photosynthesis.h: New submodel.
	* vernalization.C, vernalization.h: New submodel.
	* crpn.C, crpn.h: New submodel.
	* Makefile (SUBMODELS): Add them.
	* crop_std.C: Use them.

	* partition.C, partition.h: New submodel.
	* Makefile (SUBMODELS): Add it.
	* crop_std.C: Use it.

	* lib/log.dai ("N Balance"): Added fixation.

2001-11-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* crpaux.C, crpaux.h: New submodel.
	* Makefile (SUBMODELS): Add it.
	* crop_std.C: Use it.

	* development.C, development.h: New submodel.
	* Makefile (SUBMODELS): Added it.
	* crop_std.C: Use it.
	* lib/log.dai ("Crop Production"): Update.

	* production.C, production.h: New submodel.
	* Makefile (SUBMODELS): Added it.
	* crop_std.C: Use it.

	* lib/fertilizer.dai: Added provider information.

	* harvesting.C, harvesting.h: New submodel.
	* Makefile (SUBMODELS): Added it.
	* crop_std.C: Use it.

	* root_system.h: Added include guard.

2001-11-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.91 released.

2001-11-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/fertilizer.dai: Added descriptions.
	(NPK): Removed.